  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out !                      !
  ------------------------------------------------------------------------

2006/01/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in gct-tool
- added a missing GWENHYWFAR_API


===========================================================================
MARK: released gwenhywfar-1.99.3 (2006/01/11)
===========================================================================


2006/01/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added missing GWENHYWFAR_API in requestmgr.h


2005/12/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on typemaker:
  - fixed some bugs (e.g. missing DOMAIN before List_dup-functions)
  - added "c-headers", "pre-headers" and "post-headers"
  - added some struct-properties
    - constructor-name
    - constructor-access
    - fromdb-access
    - dup-access
- make use of GCC's new visibility features: Now we only export symbols which
  are part of the API (so marked by GWENHYWFAR_API. Gladly we had to add this
  macro for WIN32 long ago, so we just redefine this macro for GCC).
  For Gwenhywfar this removes about 700 (!!) symbols from the symbol table !


2005/12/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on memory allocation stuff:
  - calls to GWEN_NEW_OBJECT and GWEN_FREE_OBJECT MUST be matched
  - added optional code for allocation of small memory blocks without
    having to bother the heap for every 4 byte data (disabled for now,
    since it is much less effective than the glibc heap functions. However,
    my functions speed up things when working with dmalloc or efence)