@@ -3,6 +3,13 @@
   ! as soon as the next release of GnuCash is out !                      !
   ------------------------------------------------------------------------
 
+2006/01/13: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- GWEN_WaitCallback_Enter_u() now immediately calls the checkAbort function.
+  This allows instantiated callbacks to check whether a widget is to be
+  shown immediately.
+
+
 2006/01/11: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - fixed a bug in gct-tool
